# superpoint_pytorch

./: .gitignore  LICENSE  README.md  dummy.py  eval_magicpoint.py  main.py  project_logs.md  pyproject.toml  train_magicpoint.py
checkpoints/: magicpoint_best.pth
configs/: magicpoint.yaml  synthetic_dataset.yaml
random_tests/: test_coco_generated_labels.py  test_coco_joint_dataset.py  test_goodfeaturestotrack.py  test_homographic_adaptation.py  test_isolated_kornia_augmentations.py  test_isolated_shapes.py  test_occlusion_salt_and_pepper_synthetic_dataset.py  test_superpoint_weight_transfer.py  test_syntheticdataset_pipeline.py
src/superpoint/datasets/: coco_joint.py
src/superpoint/models/: magicpoint.py  superpoint.py
src/superpoint/scripts/: eval_magicpoint.py  generate_coco_labels.py  test_homographic_adaptation.py  train_magicpoint.py  train_superpoint.py
src/superpoint/training/: homographic_adaptation.py  joint_losses.py  losses.py
wandb/: latest-run
wandb/run-20260107_180757-u5s6b15r/: run-u5s6b15r.wandb
wandb/run-20260107_180757-u5s6b15r/files/: config.yaml  wandb-metadata.json
wandb/run-20260107_180946-5tkev2n7/: run-5tkev2n7.wandb
wandb/run-20260107_180946-5tkev2n7/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260107_181119-loaakovi/: run-loaakovi.wandb
wandb/run-20260107_181732-3xz8t5w5/: run-3xz8t5w5.wandb
wandb/run-20260107_182644-9ni9nefg/: run-9ni9nefg.wandb
wandb/run-20260107_185727-z2jz8icc/: run-z2jz8icc.wandb
wandb/run-20260107_190657-k7130iud/: run-k7130iud.wandb
(+15 files in other folders)
