[project]
name = "superpoint-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kornia>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "ruff>=0.14.10",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]
